# CUMVS

./: .gitignore  CMakeLists.txt  README.md
cumvs_src/modules/: CMakeLists.txt
cumvs_src/modules/cuda_multi_view_stereo/include/: cuda_multi_view_stereo.h
cumvs_src/modules/cuda_multi_view_stereo/src/: cuda_multi_view_stereo.cpp  cuda_multi_view_stereo.cu  optimization_config.h  propagation_acmh.cpp  propagation_acmh.h  texture_image.cpp
cumvs_src/samples/: app_initialize_ETH3D.cpp  draw.cpp  io.cpp  io.h
modules/cuda_multi_view_stereo/: CMakeLists.txt
modules/cuda_multi_view_stereo/src/: cuda_macro.h  cuda_multi_view_stereo.cpp  cuda_multi_view_stereo_internal.h  debug_print.h  propagation.cpp  propagation.h  propagation_gipuma.cpp  propagation_gipuma.h  texture_image.cpp  texture_image.h
opencv_ffmpeg_install/include/opencv4/opencv2/: alphamat.hpp  cudaarithm.hpp  cudabgsegm.hpp  cudafeatures2d.hpp  cudafilters.hpp  cudaimgproc.hpp  cudaobjdetect.hpp  cudaoptflow.hpp  cudastereo.hpp  cudawarping.hpp  cvconfig.h  fuzzy.hpp  hdf.hpp  opencv_modules.hpp  signal.hpp  text.hpp  videostab.hpp  ximgproc.hpp
opencv_ffmpeg_install/include/opencv4/opencv2/bioinspired/: retina.hpp  retinafasttonemapping.hpp
opencv_ffmpeg_install/include/opencv4/opencv2/cudalegacy/: NCV.hpp  NCVHaarObjectDetection.hpp  NPP_staging.hpp
opencv_ffmpeg_install/include/opencv4/opencv2/cudev/: common.hpp
opencv_ffmpeg_install/include/opencv4/opencv2/face/: facemark.hpp  facemark_train.hpp
opencv_ffmpeg_install/include/opencv4/opencv2/line_descriptor/: descriptor.hpp
opencv_ffmpeg_install/include/opencv4/opencv2/mcc/: checker_model.hpp
opencv_ffmpeg_install/include/opencv4/opencv2/saliency/: saliencySpecializedClasses.hpp
opencv_ffmpeg_install/include/opencv4/opencv2/signal/: signal_resample.hpp
opencv_ffmpeg_install/include/opencv4/opencv2/stereo/: quasi_dense_stereo.hpp
opencv_ffmpeg_install/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
samples/: CMakeLists.txt  app_patch_match_mvs.cpp  draw.h  io.cpp
(+37 files in other folders)
